# Ulti_Minimax

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_.txt  LICENSE  README.md  index.html  index.js
build_wasm/: .gitignore  build_wasm.bat
cpp/src/: CMakeLists.txt  game_manager.cpp  game_manager.hpp  main.cpp  rules.cpp  rules.hpp
cpp/test/: CMakeLists.txt  test_ulti_game.cpp
docs/: party_state_docs.xlsx
sandbox/: a.html  scripts.js  styles.css
src/: CMakeLists.txt  game_manager.cpp  game_manager.hpp  game_rules.cpp  game_rules.hpp  main.cpp
test/: CMakeLists.txt  test_game_rules.cpp  test_game_rules.txt  test_ulti_game.cpp
webapp/: .gitignore  index.html  index.js  script.js  simulation.html  simulation.js  styles.css  ulti_minimax.js  ulti_minimax.wasm
webapp/assets/images/: info.txt  sources.txt
